<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/notidroid_rootLayoutPadding">

    <TextView
        android:id="@+id/lblTitle"
        style="@style/Notidroid.Text.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signincredentialsfragment_lblTitle" />

    <TextView
        android:id="@+id/lblSubTitle"
        style="@style/Notidroid.Text.SubTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signincredentialsfragment_lblSubTitle" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/notidroid_smallSpacing"
        android:hint="@string/signincredentialsfragment_txtEmail_hint"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/signincredentialsfragment_txtPassword_hint"
        android:imeOptions="actionNext"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/txtRetypePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/signincredentialsfragment_txtRetypePassword_hint"
        android:imeOptions="actionDone"
        android:inputType="textPassword" />

    <include
        layout="@layout/accountfragments_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>